ledger/kubernetes/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: ledger-service
spec:
  type: NodePort
  selector:
    app: ledger
  ports:
    - protocol: TCP
      name: management
      port: 8558
      targetPort: management
    - protocol: TCP
      name: api
      port: 8080
      targetPort: api
    - protocol: TCP
      name: remoting
      port: 2551
